hphp/test/quick/ctor_param_promotion_generic1.php.expectf
HipHop Fatal error: parameter modifiers not supported with type variable annotation in %s on line 4
